[package]
name = "css-api"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = { version = "0.15", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.14"
lightningcss = { version = "1.0.0-alpha.67", features = [ "browserslist", "serde" ] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.45", features = ["macros"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["fmt"] }

